--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -38,6 +38,8 @@ table.display tbody tr.selected{
 #datatable tbody tr td{
 	padding-top: 2px;
 	padding-bottom: 2px;
+	padding-right: 8px;
+	padding-left: 4px;
 }
 
 /*Form*/
