--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -2,6 +2,9 @@
 html{
 	font-size: 14px;
 }
+body{
+	background-color: rgba(0, 0, 0, 0.04);
+}
 .fill{
 	width: 100% !important;
 }
@@ -40,6 +43,18 @@ table.display tbody tr.selected{
 	padding-bottom: 2px;
 	padding-right: 8px;
 	padding-left: 4px;
+}
+div.dataTables_scrollBody{
+	min-height: 50vh;
+}
+div.dataTables_scroll{
+	border: 1px solid lightgray !important;
+}
+div#datatable_wrapper{
+	padding-left: 0px;
+}
+tfoot tr th{
+	border: none !important;
 }
 
 /*Form*/
