--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -5,6 +5,10 @@ html{
 body{
 	background-color: rgba(0, 0, 0, 0.03);
 }
+div.row.title{
+	font-size: 30px;
+	width: 100%;
+}
 .fill{
 	width: 100% !important;
 }
@@ -21,6 +25,16 @@ p.header{
 	width: 46%;
 	margin-left: 2%;
 }
+div.buttons button{
+	height: 20px;
+	padding-top: 0px;
+	font-size: 11px;
+	margin-left: 3px;
+}
+div.btn-group{
+	margin-left: 3px;
+}
+
 
 /*Table*/
 table{
@@ -47,7 +61,7 @@ table.display tbody tr.selected{
 	padding-right: 8px;
 	padding-left: 4px;
 }
-#datatable_filter{
+.dataTables_filter{
 	display: none;
 }
 div.dataTables_scrollBody{
@@ -56,8 +70,11 @@ div.dataTables_scrollBody{
 div.dataTables_scroll{
 	border: 1px solid lightgray !important;
 }
-div#datatable_wrapper{
+div.dataTables_wrapper {
 	padding-left: 0px;
+}
+div.dataTables_info{
+	padding-top: 0px !important;
 }
 tfoot tr th{
 	border: none !important;
