--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -35,6 +35,10 @@ div.btn-group{
 	margin-left: 6px;
 }
 
+/*Applet*/
+.applet{
+	margin-bottom: 20px;
+}
 
 /*Table*/
 table{
@@ -87,9 +91,18 @@ form label{
 
 /*Modal*/
 @media screen and (min-width: 768px){
-    .modal-dialog{
-     	max-width: 60%;
-    }
+    .modal{
+	    overflow: hidden;
+	    left: 100px;
+	}
+	.modal-dialog{
+	    margin-right: 0;
+	    margin-left: 0;
+	    min-width: 900px;
+	}
+	.modal-header{      /* not necessary but imo important for user */
+	    cursor: move;
+	}
 }
 
 /* Expired modal */
